# ParkourRunner

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  TODO.md  artwork.cpp  artwork.hpp  back-story.md  central.cpp  central.hpp  character.cpp  character.hpp  construct.cpp  construct.hpp  data.cpp  data.hpp  enum.hpp  game.cpp  game.hpp  gameloop.cpp  gameloop.hpp  gui.hpp  main.cpp  mainloop.hpp  multimedia.hpp  process.cpp  process.hpp  profiler.cpp  profiler.hpp  program.hpp  render.cpp  render.hpp  time.cpp  time.hpp  utils.hpp  wrapper.hpp
